--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
+                        "user": "jiaxihang199@gmail.com",
                         "petType": petType,
                         "petAge": petAge,
                         "symptoms": symptoms,
