--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     },
                     body: JSON.stringify({
                         "user": "jiaxihang199@gmail.com",
+                        "response_mode": "blocking",
                         "inputs": { // 将参数封装到 inputs 对象中
                             "petType": petType,
                             "petAge": petAge,
