--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
             justify-content: center;
             gap: 2rem;
             padding: 2rem 0;
-            perspective: 1000px;
-            /* 为视差效果设置透视 */
+            perspective: 1500px;
+            /* 增强透视效果，使 3D 更明显 */
         }
 
         .shop-item {
@@ -460,9 +460,11 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             padding: 2rem;
             text-align: center;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
             position: relative;
             z-index: 1;
+            transform-style: preserve-3d;
+            /* 确保 3D 变换生效 */
         }
 
         .shop-item img {
@@ -505,17 +507,18 @@
         }
 
         .shop-item:hover {
-            transform: scale(1.1) rotateX(5deg) rotateY(5deg);
-            /* 放大并添加视差倾斜 */
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            transform: scale(1.2) rotateX(10deg) rotateY(10deg);
+            /* 放大更多并增强 3D 倾斜 */
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
+            /* 增强阴影 */
             filter: brightness(1);
             /* 保持亮度 */
             z-index: 2;
         }
 
         .shop-item:hover img {
-            transform: translateY(-10px);
-            /* 图片上移，增强立体感 */
+            transform: translateZ(20px);
+            /* 图片向前突出，增强 3D 感 */
         }
     </style>
 
