--- a/index.html
+++ b/index.html
@@ -424,92 +424,113 @@
             margin: 0 auto;
             padding: 4rem 2rem;
             text-align: center;
+            background: #f9fafb;
+            /* 添加一个浅色背景，提升整体质感 */
         }
 
         h2 {
             font-size: 2.5rem;
-            margin-bottom: 2rem;
+            margin-bottom: 2.5rem;
             color: #1C64F2;
             position: relative;
+            font-weight: 700;
+            /* 标题加粗 */
         }
 
         h2::after {
             content: '';
-            width: 50px;
-            height: 3px;
+            width: 60px;
+            height: 4px;
             background: #1C64F2;
             position: absolute;
-            bottom: -10px;
+            bottom: -15px;
             left: 50%;
             transform: translateX(-50%);
+            border-radius: 2px;
+            /* 圆角下划线 */
         }
 
         .shop-gallery {
             display: flex;
             justify-content: center;
-            gap: 2rem;
+            gap: 2.5rem;
+            /* 增加卡片间距 */
             padding: 2rem 0;
-            perspective: 1500px;
-            /* 增强透视效果，使 3D 更明显 */
+            perspective: 2000px;
+            /* 增强透视效果 */
         }
 
         .shop-item {
-            width: 400px;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            width: 350px;
+            /* 稍微减小卡片宽度，显得更紧凑 */
+            background: linear-gradient(145deg, #ffffff, #f0f0f0);
+            /* 添加渐变背景 */
+            border-radius: 20px;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
             padding: 2rem;
             text-align: center;
-            transition: transform 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
+            transition: transform 0.5s ease, box-shadow 0.5s ease, filter 0.5s ease;
+            /* 延长过渡时间，动画更平滑 */
             position: relative;
-            z-index: 1;
             transform-style: preserve-3d;
-            /* 确保 3D 变换生效 */
+            /* 启用 3D 变换 */
+            will-change: transform;
+            /* 优化性能 */
         }
 
         .shop-item img {
             width: 100%;
-            height: 250px;
+            height: 220px;
+            /* 稍微减小图片高度 */
             object-fit: cover;
-            border-radius: 10px;
-            margin-bottom: 1rem;
-            transition: transform 0.3s ease;
+            border-radius: 12px;
+            margin-bottom: 1.5rem;
+            transition: transform 0.5s ease;
+            transform: translateZ(0);
+            /* 初始状态 */
         }
 
         .shop-item h3 {
-            font-size: 1.8rem;
-            margin: 1rem 0;
+            font-size: 1.6rem;
+            /* 字体稍小，显得更精致 */
+            margin: 0.5rem 0 1rem;
             color: #1C64F2;
+            font-weight: 600;
         }
 
         .shop-item a {
             display: inline-block;
-            padding: 1rem 2rem;
+            padding: 0.8rem 2rem;
             background: #1C64F2;
             color: white;
             text-decoration: none;
-            border-radius: 5px;
+            border-radius: 8px;
             margin-top: 1rem;
-            font-size: 1.2rem;
-            transition: background 0.3s;
+            font-size: 1.1rem;
+            font-weight: 500;
+            transition: background 0.3s ease, transform 0.3s ease;
+            transform: translateZ(0);
+            /* 初始状态 */
         }
 
         .shop-item a:hover {
             background: #1550c2;
+            transform: translateZ(10px);
+            /* 按钮在悬停时向前突出 */
         }
 
         /* 鼠标悬停效果 */
         .shop-gallery:hover .shop-item {
-            transform: scale(0.9);
+            transform: scale(0.95);
             /* 周围卡片缩小 */
-            filter: brightness(0.8);
+            filter: brightness(0.85);
             /* 周围卡片变暗 */
         }
 
         .shop-item:hover {
-            transform: scale(1.2) rotateX(10deg) rotateY(10deg);
-            /* 放大更多并增强 3D 倾斜 */
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
+            transform: scale(1.15) rotateX(8deg) rotateY(8deg);
+            /* 放大并倾斜 */
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.2);
             /* 增强阴影 */
             filter: brightness(1);
             /* 保持亮度 */
@@ -517,8 +538,38 @@
         }
 
         .shop-item:hover img {
-            transform: translateZ(20px);
+            transform: translateZ(30px);
             /* 图片向前突出，增强 3D 感 */
+        }
+
+        .shop-item:hover h3 {
+            transform: translateZ(20px);
+            /* 标题也向前突出 */
+        }
+
+        .shop-item:hover a {
+            transform: translateZ(15px);
+            /* 按钮向前突出 */
+        }
+
+        /* 添加细微的视差效果 */
+        .shop-item:hover {
+            animation: tilt 0.5s ease;
+            /* 添加一个倾斜动画 */
+        }
+
+        @keyframes tilt {
+            0% {
+                transform: scale(1) rotateX(0deg) rotateY(0deg);
+            }
+
+            50% {
+                transform: scale(1.15) rotateX(12deg) rotateY(12deg);
+            }
+
+            100% {
+                transform: scale(1.15) rotateX(8deg) rotateY(8deg);
+            }
         }
     </style>
 
